--- a/Super Mario 3/index.html
+++ b/Super Mario 3/index.html
@@ -150,11 +150,11 @@
                                                                 </header2>
 
 								<p>
-									Animations in this project were handled in multiple different ways, depending on what type of object is animating. </br>
-									For the enemies in the level the animations were specific to each instance of the object. This was so that if you hit a koopa, turning it into a shell, all other koopas wouldn't go into their shells visually as well. </br>
-									However, the sprite sheets for each enemy and objects is static in order to prevent loading in the same textures multiple times. </br>
-									The block level objects were all static in their own block type through. This allows for, for example, the question mark blocks to all spin at the same time at the same rate. Even though they are spawned into the level gradually. </br>
-									The player's animations are special in this project though. This is because the speed that their animations play is proportional to the current X velocity of the character. They therefore animate faster when sprinting than walking across the level. </br>
+									Animations in this project were handled in multiple different ways, depending on what type of object is animating. </br> 
+									</br>For the enemies in the level the animations were specific to each instance of the object. This was so that if you hit a koopa, turning it into a shell, all other koopas wouldn't go into their shells visually as well. </br>
+									</br>However, the sprite sheets for each enemy and objects is static in order to prevent loading in the same textures multiple times. </br>
+									</br>The block level objects were all static in their own block type through. This allows for, for example, the question mark blocks to all spin at the same time at the same rate. Even though they are spawned into the level gradually. </br>
+									</br>The player's animations are special in this project though. This is because the speed that their animations play is proportional to the current X velocity of the character. They therefore animate faster when sprinting than walking across the level. </br>
 								</p>
 								
 								
