--- a/Super Mario 3/index.html
+++ b/Super Mario 3/index.html
@@ -134,6 +134,7 @@
 									<div class="row">
 										<div class="col-4 col-4-medium col-12-small">
 											<a class="image fit"><img src="SMB Images/Background Layer Example.jpg"></a>
+											<a class="image fit"><img src="SMB Images/BackgroundSprites example.jpg"></a>
 										</div>
 									</div>
 								<p>
