--- a/Super Mario 3/index.html
+++ b/Super Mario 3/index.html
@@ -134,6 +134,9 @@
 									<div class="row">
 										<div class="col-6 col-4-medium col-12-small">
 											<a class="image fit"><img src="SMB Images/Background Layer Example.jpg"></a>
+										</div>
+										
+										<div class="col-6 col-4-medium col-12-small">
 											<a class="image fit"><img src="SMB Images/BackgroundSprites example.jpg"></a>
 										</div>
 									</div>
