--- a/Super Mario 3/index.html
+++ b/Super Mario 3/index.html
@@ -6,7 +6,7 @@
 -->
 <html>
 	<head>
-		<title>Super Mario Bros 3 (WORK IN PROGRESS)</title>
+		<title>Super Mario Bros 3</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
