--- a/index.html
+++ b/index.html
@@ -60,7 +60,8 @@
 								<h2 class="alt"> Brandon Roberts</h2>
 								<p>
 									Welcome to my portfolio! </br> 
-									This portfolio contains descriptions and content depicting the main projects I have developed so far in my career. Clicking / tapping on any of the icons below takes you to a sub-website that is soley focused on that one project. Including what the project involved to create, how I achieved that goal and what the main points in development there were. </br> 
+									This portfolio contains descriptions and content depicting the main projects I have developed so far in my career. 
+									Clicking / tapping on any of the icons below takes you to a sub-website that is soley focused on that one project. Including what the project involved to create, how I achieved that goal and what the main points in development there were. </br> 
 									At the bottom of the page there is also an about me section detailing who I am and my background in computer games programming.
 								</p>
 							</header>
@@ -86,16 +87,6 @@
 									</article>
 								</div>
 									
-								<!--
-								<div class="col-4 col-12-mobile">						
-									<article class="item">
-										<a href="F-Zero Website/index.html" target = "_blank" class="image fit"><img src="images/F-Zero.png" alt="" /></a>
-										<header>
-											<h3>F-Zero Re-Creation</h3>
-										</header>
-									</article>
-								</div>
-								-->
 								<div class="col-4 col-12-mobile">
 									<article class="item">
 										<a href="Pacman/index.html" target = "_blank" class="image fit"><img src="images/pacmanImage.png" alt="" /></a>
@@ -144,8 +135,6 @@
 							<header>
 								<h2>About Me</h2>
 							</header>
-
-							<!-- <a href="#" class="image featured"><img src="images/pic08.jpg" alt="" /></a> -->
 
 							<p align="left">Currently, I am a first year computer games programmng student studying at Staffordshire University who, for a period of 7 months during 2019/2020, worked as a programmer for a local mobile games company, Curioso Games. Whilst at this company I worked in a small team to develop two of the games listed in this portfolio; Marbles, and Rituals. Whilst at Curioso we used Unity extensivly, taking advantage of the rendering, audio and animation systems contained within the engine in order to create the engaging and interesting games shown above.</br> </br>
 
