--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
 								
 								<div class="col-4 col-12-mobile">
 									<article class="item">
-										<a href="GEC OpenGL Project/index.html" target = "_blank" class="image fit"><img src="images/Super Mario Bros 3 Image.png" alt="" /></a>
+										<a href="GEC OpenGL Project/index.html" target = "_blank" class="image fit"><img src="images/FOGGS Opengl project.bmp" alt="" /></a>
 										<header>
 											<h3>OpenGL Project</h3>
 										</header>
