--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
 								<div class="col-4 col-12-mobile">
 									<article class="item">
 										<!-- <a href="GEC OpenGL Project/index.html" target = "_blank" class="image fit"><img src="images/FOGGS Opengl project.bmp" alt="" /></a> -->
-										<a href="Stoke On-Trend Game Jam/index.html" target = "_blank" class="image fit"><img src="images/FOGGS Opengl project.bmp" alt="" /></a>
+										<a href="Stoke On Trent Game Jam/index.html" target = "_blank" class="image fit"><img src="images/FOGGS Opengl project.bmp" alt="" /></a>
 										<header>
 											<h3>OpenGL Project</h3>
 										</header>
