--- a/Game Jams/index.html
+++ b/Game Jams/index.html
@@ -65,7 +65,7 @@
 					<div class="reel">
 
 						<article>
-							<a href="#" class="image featured"><img src="images/Rise Of The Spitfire.png" alt="Spitfire Game" /></a>
+							<a href="https://player-two.itch.io/rise-of-the-spitfire" class="image featured"><img src="images/Rise Of The Spitfire.png" alt="Spitfire Game" /></a>
 							<header>
 								<h3><a href="#">Rise Of The Spitfire</a></h3>
 							</header>
@@ -73,7 +73,7 @@
 						</article>
 
 						<article>
-							<a href="#" class="image featured"><img src="images/LLTK.png" alt="" /></a>
+							<a href="https://player-two.itch.io/long-live-the-king" class="image featured"><img src="images/LLTK.png" alt="" /></a>
 							<header>
 								<h3><a href="#">Long Live The King</a></h3>
 							</header>
@@ -81,7 +81,7 @@
 						</article>
 
 						<article>
-							<a href="#" class="image featured"><img src="images/Zomebie Escape.jpg" alt="" /></a>
+							<a href="https://player-two.itch.io/zombie-escape" class="image featured"><img src="images/Zomebie Escape.jpg" alt="" /></a>
 							<header>
 								<h3><a href="#">Zombie Escape</a></h3>
 							</header>
