--- a/First Year/index.html
+++ b/First Year/index.html
@@ -23,10 +23,10 @@
 							<header>
 								<h1><a href="index.html" id="logo">First Year Projects</a></h1>
 								<hr />
-								<p>A Sub-Website containing all my first year projects</p>
+								<p>A Sub-Website Containing All My First Year Projects</p>
 							</header>
 							<footer>
-								<a href="#banner" class="button circled scrolly">Start</a>
+								<a href="#banner" class="button circled scrolly">Projects</a>
 							</footer>
 						</div>
 
@@ -183,12 +183,9 @@
 										</header>
 										<p>Links to all of my social media profiles</p>
 										<ul class="icons">
-											<li><a href="#" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
-											<li><a href="#" class="icon brands fa-facebook-f"><span class="label">Facebook</span></a></li>
-											<li><a href="#" class="icon brands fa-instagram"><span class="label">Instagram</span></a></li>
-											<li><a href="#" class="icon brands fa-pinterest"><span class="label">Pinterest</span></a></li>
-											<li><a href="#" class="icon brands fa-dribbble"><span class="label">Dribbble</span></a></li>
-											<li><a href="#" class="icon brands fa-linkedin-in"><span class="label">Linkedin</span></a></li>
+											<li><a href="https://twitter.com/BrandonRob3rts" target="_blank" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
+											<li><a href="https://www.linkedin.com/in/brandon-m-j-roberts/" target="_blank" class="icon brands fa-linkedin-in"><span class="label">Linkedin</span></a></li>
+											<li><a href="https://github.com/BrandonMJRoberts" target="_blank" class="icon brands fa-github"><span class="label">Linkedin</span></a></li>
 										</ul>
 									</section>
 
