--- a/Game Jams/index.html
+++ b/Game Jams/index.html
@@ -37,9 +37,9 @@
 								<li>
 									<a href="#">Dropdown</a>
 									<ul>
-										<li><a href="#">Rise Of The Spitfire</a></li>
-										<li><a href="#">Long Live The King</a></li>
-										<li><a href="#">Zomebie Escape</a></li>
+										<li><a href="#spitfire">Rise Of The Spitfire</a></li>
+										<li><a href="#LLTK">Long Live The King</a></li>
+										<li><a href="#zombie">Zomebie Escape</a></li>
 									</ul>
 								</li>
 								<li><a href="left-sidebar.html">Left Sidebar</a></li>
@@ -91,7 +91,7 @@
 				</section>
 
 			<!-- Rise Of the spitfire -->
-				<div class="wrapper style2">
+				<div id = "spitfire" class="wrapper style2">
 
 					<article id="main" class="container special">
 						<a href="#" class="image featured"><img src="images/pic06.jpg" alt="" /></a>
@@ -121,7 +121,7 @@
 			
 			<!-- Long Live The King -->
 			
-			<div class="wrapper style2">
+			<div id = "LLTK" class="wrapper style2">
 
 					<article id="main" class="container special">
 						<a href="#" class="image featured"><img src="images/pic06.jpg" alt="" /></a>
@@ -150,7 +150,7 @@
 				</div>
 			
 			<!-- Zombie Escape -->
-			<div class="wrapper style2">
+			<div id = "zombie"  class="wrapper style2">
 
 					<article id="main" class="container special">
 						<a href="#" class="image featured"><img src="images/pic06.jpg" alt="" /></a>
