--- a/Game Jams/index.html
+++ b/Game Jams/index.html
@@ -39,7 +39,7 @@
 									<ul>
 										<li><a href="#spitfire">Rise Of The Spitfire</a></li>
 										<li><a href="#LLTK">Long Live The King</a></li>
-										<li><a href="#zombie">Zomebie Escape</a></li>
+										<li><a href="#zombie">Zombie Escape</a></li>
 									</ul>
 								</li>
 								<li><a href="left-sidebar.html">Left Sidebar</a></li>
