--- a/Game Jams/index.html
+++ b/Game Jams/index.html
@@ -187,9 +187,9 @@
 								<!-- Contact -->
 									<section class="contact">
 										<header>
-											<h3>Nisl turpis nascetur interdum?</h3>
+											<h3>Links To My Socials</h3>
 										</header>
-										<p>Urna nisl non quis interdum mus ornare ridiculus egestas ridiculus lobortis vivamus tempor aliquet.</p>
+										<p>All Of My Social Media Profiles:</p>
 										<ul class="icons">
 											<li><a href="https://twitter.com/BrandonRob3rts" target="_blank" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
 											<li><a href="https://www.linkedin.com/in/brandon-m-j-roberts/" target="_blank" class="icon brands fa-linkedin-in"><span class="label">Linkedin</span></a></li>
