--- a/First Year/index.html
+++ b/First Year/index.html
@@ -37,14 +37,11 @@
 								<li>
 									<a href="#">Dropdown</a>
 									<ul>
-										<li><a href="#">Super Mario Bros 3</a></li>
-										<li><a href="#">Pacman</a></li>
-										<li><a href="#">OpenGL Boat Project</a></li>
+										<li><a href="#Mario">Super Mario Bros 3</a></li>
+										<li><a href="#Pacman">Pacman</a></li>
+										<li><a href="#OpenGL">OpenGL Boat Project</a></li>
 									</ul>
 								</li>
-								<li><a href="left-sidebar.html">Left Sidebar</a></li>
-								<li><a href="right-sidebar.html">Right Sidebar</a></li>
-								<li><a href="no-sidebar.html">No Sidebar</a></li>
 							</ul>
 						</nav>
 
@@ -55,7 +52,7 @@
 					<div class="reel">
 
 						<article>
-							<a href="#" class="image featured"><img src="images/pic01.jpg" alt="" /></a>
+							<a href="#Mario" class="image featured"><img src="images/pic01.jpg" alt="" /></a>
 							<header>
 								<h3><a href="#">Super Mario Bros 3</a></h3>
 							</header>
@@ -63,7 +60,7 @@
 						</article>
 						
 						<article>
-							<a href="#" class="image featured"><img src="images/pic01.jpg" alt="" /></a>
+							<a href="#Pacman" class="image featured"><img src="images/pic01.jpg" alt="" /></a>
 							<header>
 								<h3><a href="#">Pacman</a></h3>
 							</header>
@@ -71,7 +68,7 @@
 						</article>
 						
 						<article>
-							<a href="#" class="image featured"><img src="images/pic01.jpg" alt="" /></a>
+							<a href="#OpenGL" class="image featured"><img src="images/pic01.jpg" alt="" /></a>
 							<header>
 								<h3><a href="#">OpenGL Boat Project</a></h3>
 							</header>
@@ -82,7 +79,7 @@
 				</section>
 
 			<!-- Mario -->
-				<div class="wrapper style2">
+				<div id = "Mario" class="wrapper style2">
 
 					<article id="main" class="container special">
 						<a href="#" class="image featured"><img src="images/pic06.jpg" alt="" /></a>
@@ -111,7 +108,7 @@
 				</div>
 			
 			<!-- Pacman -->
-				<div class="wrapper style2">
+				<div id = "Pacman" class="wrapper style2">
 
 					<article id="main" class="container special">
 						<a href="#" class="image featured"><img src="images/pic06.jpg" alt="" /></a>
@@ -140,7 +137,7 @@
 				</div>
 
 			<!-- Main -->
-				<div class="wrapper style2">
+				<div id = "OpenGL" class="wrapper style2">
 
 					<article id="main" class="container special">
 						<a href="#" class="image featured"><img src="images/pic06.jpg" alt="" /></a>
