--- a/Professional Work/index.html
+++ b/Professional Work/index.html
@@ -37,13 +37,10 @@
 								<li>
 									<a href="#">Dropdown</a>
 									<ul>
-										<li><a href="#">Lost My Marbles</a></li>
-										<li><a href="#">Rituals: Book Of Skog</a></li>
+										<li><a href="#Marbles">Lost My Marbles</a></li>
+										<li><a href="#Rituals">Rituals: Book Of Skog</a></li>
 									</ul>
 								</li>
-								<li><a href="left-sidebar.html">Left Sidebar</a></li>
-								<li><a href="right-sidebar.html">Right Sidebar</a></li>
-								<li><a href="no-sidebar.html">No Sidebar</a></li>
 							</ul>
 						</nav>
 				</div>
@@ -71,7 +68,7 @@
 				</section>
 
 			<!-- Main -->
-				<div class="wrapper style2">
+				<div id = "Marbles" class="wrapper style2">
 
 					<article id="main" class="container special">
 						<a href="#" class="image featured"><img src="images/pic06.jpg" alt="" /></a>
@@ -102,7 +99,7 @@
 			<!-- Main -->
 				<div class="wrapper style2">
 
-					<article id="main" class="container special">
+					<article id="Rituals" class="container special">
 						<a href="#" class="image featured"><img src="images/pic06.jpg" alt="" /></a>
 						<header>
 							<h2><a href="#">Rituals: Book Of Skog</a></h2>
