--- a/Professional Work/index.html
+++ b/Professional Work/index.html
@@ -136,7 +136,7 @@
 										<header>
 											<h3>Links To My Socials:</h3>
 										</header>
-										<p>Urna nisl non quis interdum mus ornare ridiculus egestas ridiculus lobortis vivamus tempor aliquet.</p>
+										<p>Social media links.</p>
 										<ul class="icons">
 											<li><a href="https://twitter.com/BrandonRob3rts" target="_blank" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
 											<li><a href="https://www.linkedin.com/in/brandon-m-j-roberts/" target="_blank" class="icon brands fa-linkedin-in"><span class="label">Linkedin</span></a></li>
