--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
 								<h2 class="alt"> Brandon Roberts</h2>
 								<p>
 									Welcome to my portfolio! </br> 
-									This portfolio contains the main projects I have developed so far, all split into different sub sections. 
+									This portfolio contains the main projects I have developed so far, all split into different sub sections.</br>
 									Clicking / Tapping on any of the icons below takes you to a sub-website that is soley focused on that one sub section. Each sub-website contains a list of games developed, along with some details on how they were developed and what they were for.</br> 
 									At the bottom of the page there is an 'about me' section which details my background in computer games programming, along with general information about me.
 								</p>
