--- a/index.html
+++ b/index.html
@@ -61,7 +61,8 @@
 								<p>
 									Welcome to my portfolio! </br> 
 									This portfolio contains the main projects I have developed so far, all split into different sub sections.</br>
-									Clicking / Tapping on any of the icons below takes you to a sub-website that is soley focused on that one sub section. Each sub-website contains a list of games developed, along with some details on how they were developed and what they were for.</br> 
+									Clicking / Tapping on any of the icons below takes you to a sub-website that is soley focused on that one sub section.</br>
+									Each sub-website contains a list of games developed, along with some details on how they were developed and what they were for.</br> 
 									At the bottom of the page there is an 'about me' section which details my background in computer games programming, along with general information about me.
 								</p>
 							</header>
