--- a/First Year/index.html
+++ b/First Year/index.html
@@ -56,7 +56,7 @@
 							<header>
 								<h3><a href="#">Super Mario Bros 3</a></h3>
 							</header>
-							<p>Re-creation of the SNES Super Mario Bros 3.</p>
+							<p>SNES Super Mario Bros 3 Re-creation.</p>
 						</article>
 						
 						<article>
@@ -64,7 +64,7 @@
 							<header>
 								<h3><a href="#">Pacman</a></h3>
 							</header>
-							<p>My first game project for university.</p>
+							<p>First Game Project For University.</p>
 						</article>
 						
 						<article>
@@ -72,7 +72,7 @@
 							<header>
 								<h3><a href="#">OpenGL Boat Project</a></h3>
 							</header>
-							<p>First game developed using OpenGL.</p>
+							<p>First Project Developed In OpenGL.</p>
 						</article>
 
 					</div>
@@ -82,7 +82,7 @@
 				<div id = "Mario" class="wrapper style2">
 
 					<article id="main" class="container special">
-						<a href="#" class="image featured"><img src="images/pic06.jpg" alt="" /></a>
+						<a href="#" class="image featured"><img src="images/MarioBros3.jpg" alt="" /></a>
 						<header>
 							<h2><a href="#">Super Mario Bros 3</a></h2>
 							<p>
@@ -111,7 +111,7 @@
 				<div id = "Pacman" class="wrapper style2">
 
 					<article id="main" class="container special">
-						<a href="#" class="image featured"><img src="images/pic06.jpg" alt="" /></a>
+						<a href="#" class="image featured"><img src="images/Pacman.jpg" alt="" /></a>
 						<header>
 							<h2><a href="#">Pacman</a></h2>
 							<p>
@@ -140,7 +140,7 @@
 				<div id = "OpenGL" class="wrapper style2">
 
 					<article id="main" class="container special">
-						<a href="#" class="image featured"><img src="images/pic06.jpg" alt="" /></a>
+						<a href="#" class="image featured"><img src="images/Boat.jpg" alt="" /></a>
 						<header>
 							<h2><a href="#">OpenGL Boat Project</a></h2>
 							<p>
@@ -187,7 +187,7 @@
 								<!-- Copyright -->
 									<div class="copyright">
 										<ul class="menu">
-											<li>&copy; Untitled. All rights reserved.</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
+											<li>&copy; Brandon Roberts.</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
 										</ul>
 									</div>
 
