--- a/First Year/index.html
+++ b/First Year/index.html
@@ -52,7 +52,7 @@
 					<div class="reel">
 
 						<article>
-							<a href="#Mario" class="image featured"><img src="images/pic01.jpg" alt="" /></a>
+							<a href="#Mario" class="image featured"><img src="images/Super Mario Bros 3 Image.png" alt="" /></a>
 							<header>
 								<h3><a href="#">Super Mario Bros 3</a></h3>
 							</header>
@@ -60,7 +60,7 @@
 						</article>
 						
 						<article>
-							<a href="#Pacman" class="image featured"><img src="images/pic01.jpg" alt="" /></a>
+							<a href="#Pacman" class="image featured"><img src="images/pacmanImage.png" alt="" /></a>
 							<header>
 								<h3><a href="#">Pacman</a></h3>
 							</header>
