--- a/First Year/index.html
+++ b/First Year/index.html
@@ -82,7 +82,7 @@
 				<div id = "Mario" class="wrapper style2">
 
 					<article id="main" class="container special">
-						<a href="#" class="image featured"><img src="images/Super Mario Bros 3 Image.png" alt="" /></a>
+						<a href="#" class="image featured"><img src="images/.png" alt="" /></a>
 						<header>
 							<h2><a href="#">Super Mario Bros 3</a></h2>
 							<p>
@@ -111,7 +111,7 @@
 				<div id = "Pacman" class="wrapper style2">
 
 					<article id="main" class="container special">
-						<a href="#" class="image featured"><img src="images/pacmanImage.png" alt="" /></a>
+						<a href="#" class="image featured"><img src="images/.png" alt="" /></a>
 						<header>
 							<h2><a href="#">Pacman</a></h2>
 							<p>
@@ -140,7 +140,7 @@
 				<div id = "OpenGL" class="wrapper style2">
 
 					<article id="main" class="container special">
-						<a href="#" class="image featured"><img src="images/Boat.jpg" alt="" /></a>
+						<a href="#" class="image featured"><img src="images/.jpg" alt="" /></a>
 						<header>
 							<h2><a href="#">OpenGL Boat Project</a></h2>
 							<p>
