--- a/First Year/index.html
+++ b/First Year/index.html
@@ -35,7 +35,7 @@
 							<ul>
 								<li><a href="index.html">Home</a></li>
 								<li>
-									<a href="#">Dropdown</a>
+									<a href="#">Projects</a>
 									<ul>
 										<li><a href="#Mario">Super Mario Bros 3</a></li>
 										<li><a href="#Pacman">Pacman</a></li>
