--- a/First Year/index.html
+++ b/First Year/index.html
@@ -86,19 +86,15 @@
 						<header>
 							<h2><a href="#">Super Mario Bros 3</a></h2>
 							<p>
-								Sociis aenean eu aenean mollis mollis facilisis primis ornare penatibus aenean. Cursus ac enim
-								pulvinar curabitur morbi convallis. Lectus malesuada sed fermentum dolore amet.
+								Developed using SDL2 in C++ for a first year game development task.  
 							</p>
 						</header>
 						<p>
-							Commodo id natoque malesuada sollicitudin elit suscipit. Curae suspendisse mauris posuere accumsan massa
-							posuere lacus convallis tellus interdum. Amet nullam fringilla nibh nulla convallis ut venenatis purus
-							sit arcu sociis. Nunc fermentum adipiscing tempor cursus nascetur adipiscing adipiscing. Primis aliquam
-							mus lacinia lobortis phasellus suscipit. Fermentum lobortis non tristique ante proin sociis accumsan
-							lobortis. Auctor etiam porttitor phasellus tempus cubilia ultrices tempor sagittis. Nisl fermentum
-							consequat integer interdum integer purus sapien. Nibh eleifend nulla nascetur pharetra commodo mi augue
-							interdum tellus. Ornare cursus augue feugiat sodales velit lorem. Semper elementum ullamcorper lacinia
-							natoque aenean scelerisque.
+							As a submission for my first semester game development module we were tasked with following tutorials on creating the one screen arcade Mario Bros game. 
+							As an extension to this task we were invited to expand on the task of we wished, so long as it still fit the marking criteria. 
+							Therefore, I decided to use some prior experience programming and aim at re-creating as much of the first world of the SNES Mario Bros 3 game as I could in the time frame.
+							Overall, the visuals and controls for the first world, and the first level were able to be created in the could of months time frame, as is shown in the video link below.
+							The main difficulty within this project came from a combination of it being one of my first large scale solo projects undertaken, and the sheer amount of objects, items and systems requred to be put in place to accomidate everything.   
 						</p>
 						<footer>
 							<a href="#" class="button">Link To Video</a>
@@ -115,8 +111,7 @@
 						<header>
 							<h2><a href="#">Pacman</a></h2>
 							<p>
-								Sociis aenean eu aenean mollis mollis facilisis primis ornare penatibus aenean. Cursus ac enim
-								pulvinar curabitur morbi convallis. Lectus malesuada sed fermentum dolore amet.
+								Re-creation of the iconic arcade game of Pacman, with a variety of level graphics and fully AI ghosts to run from.
 							</p>
 						</header>
 						<p>
@@ -144,8 +139,7 @@
 						<header>
 							<h2><a href="#">OpenGL Boat Project</a></h2>
 							<p>
-								Sociis aenean eu aenean mollis mollis facilisis primis ornare penatibus aenean. Cursus ac enim
-								pulvinar curabitur morbi convallis. Lectus malesuada sed fermentum dolore amet.
+								First year submission for an OpenGL module that was inspired by sailing a boat around a lake.  
 							</p>
 						</header>
 						<p>
