--- a/First Year/index.html
+++ b/First Year/index.html
@@ -90,7 +90,7 @@
 							</p>
 						</header>
 						<p>
-							As a submission for my first semester game development module we were tasked with following tutorials on creating the one screen arcade Mario Bros game. 
+							As a submission for my second semester game development module we were tasked with following tutorials on creating the one screen arcade Mario Bros game. 
 							As an extension to this task we were invited to expand on the task of we wished, so long as it still fit the marking criteria. 
 							Therefore, I decided to use some prior experience programming and aim at re-creating as much of the first world of the SNES Mario Bros 3 game as I could in the time frame.
 							Overall, the visuals and controls for the first world, and the first level were able to be created in the could of months time frame, as is shown in the video link below.
@@ -115,14 +115,12 @@
 							</p>
 						</header>
 						<p>
-							Commodo id natoque malesuada sollicitudin elit suscipit. Curae suspendisse mauris posuere accumsan massa
-							posuere lacus convallis tellus interdum. Amet nullam fringilla nibh nulla convallis ut venenatis purus
-							sit arcu sociis. Nunc fermentum adipiscing tempor cursus nascetur adipiscing adipiscing. Primis aliquam
-							mus lacinia lobortis phasellus suscipit. Fermentum lobortis non tristique ante proin sociis accumsan
-							lobortis. Auctor etiam porttitor phasellus tempus cubilia ultrices tempor sagittis. Nisl fermentum
-							consequat integer interdum integer purus sapien. Nibh eleifend nulla nascetur pharetra commodo mi augue
-							interdum tellus. Ornare cursus augue feugiat sodales velit lorem. Semper elementum ullamcorper lacinia
-							natoque aenean scelerisque.
+							Through the first semester of the first year we were tasked, as part of a fundamentals module, with re-creating the arcade game Pacman as well as we could.
+							Having completed the basics of Pacman - the maze, player controls and collisions - with a fair amount of time remaining till submission, I decided to add AI to the ghosts that chase you.
+							Prior to this I had not written any complete AI system, so I researched ways of going about the task and decided to go with a stack-based finate state machine. 
+							This ended up working very well, and I was inspired to add another gamemode to the game, as I sill had some time left at this point. 
+							This other gamemode allows for the player to play as one of the ghosts, working in tandem with the other ghosts to chase down an AI controlled Pacman.
+							This is demonstrated in the video link below, and developing the Pacman AI took me right up to the submission date.
 						</p>
 						<footer>
 							<a href="#" class="button">Link To Video</a>
@@ -143,14 +141,10 @@
 							</p>
 						</header>
 						<p>
-							Commodo id natoque malesuada sollicitudin elit suscipit. Curae suspendisse mauris posuere accumsan massa
-							posuere lacus convallis tellus interdum. Amet nullam fringilla nibh nulla convallis ut venenatis purus
-							sit arcu sociis. Nunc fermentum adipiscing tempor cursus nascetur adipiscing adipiscing. Primis aliquam
-							mus lacinia lobortis phasellus suscipit. Fermentum lobortis non tristique ante proin sociis accumsan
-							lobortis. Auctor etiam porttitor phasellus tempus cubilia ultrices tempor sagittis. Nisl fermentum
-							consequat integer interdum integer purus sapien. Nibh eleifend nulla nascetur pharetra commodo mi augue
-							interdum tellus. Ornare cursus augue feugiat sodales velit lorem. Semper elementum ullamcorper lacinia
-							natoque aenean scelerisque.
+							For the second semester we had a module teaching the basics of the fixed function pipeline of OpenGL. 
+							Through this module we learnt the basics of the graphics pipeline, rendering objects to the screen, and texturing them. However, during this time I was looking into how to work with shaders within the more modern versions of OpenGL.
+							And therefore I decided to work on a submission that used shaders entirely written by me. This was partly to hit the 'advanced' section of the mark scheme, but it was mainly as an opportunity to put some of the research I had condcted into practice in a time limited task.
+							Overall the visuals of the submission were not great, but everything demonstrated in the project was handwritten by me and is running using custom OpenGL shaders.
 						</p>
 						<footer>
 							<a href="#" class="button">Link To Video</a>
