--- a/Game Jams/index.html
+++ b/Game Jams/index.html
@@ -35,7 +35,7 @@
 							<ul>
 								<li><a href="index.html">Home</a></li>
 								<li>
-									<a href="#">Dropdown</a>
+									<a href="#">Projects</a>
 									<ul>
 										<li><a href="#spitfire">Rise Of The Spitfire</a></li>
 										<li><a href="#LLTK">Long Live The King</a></li>
@@ -44,7 +44,6 @@
 								</li>
 							</ul>
 						</nav>
-
 				</div>
 
 			<!-- Banner -->
@@ -66,7 +65,7 @@
 							<header>
 								<h3><a href="#">Rise Of The Spitfire</a></h3>
 							</header>
-							<p>Developed June 2021 for the Stoke-On-Trend Game Jam.</p>
+							<p>Overall winner of the June 2021 Stoke-On-Trend Game Jam.</p>
 						</article>
 
 						<article>
@@ -95,22 +94,19 @@
 						<header>
 							<h2><a href="#">Rise Of The Spitfire</a></h2>
 							<p>
-								Sociis aenean eu aenean mollis mollis facilisis primis ornare penatibus aenean. Cursus ac enim
-								pulvinar curabitur morbi convallis. Lectus malesuada sed fermentum dolore amet.
+								As an end to the first year, my university organised a week long game jam in conjunction with the Stoke BID, putting forward seven themes in total for the jam. 
 							</p>
 						</header>
 						<p>
-							Commodo id natoque malesuada sollicitudin elit suscipit. Curae suspendisse mauris posuere accumsan massa
-							posuere lacus convallis tellus interdum. Amet nullam fringilla nibh nulla convallis ut venenatis purus
-							sit arcu sociis. Nunc fermentum adipiscing tempor cursus nascetur adipiscing adipiscing. Primis aliquam
-							mus lacinia lobortis phasellus suscipit. Fermentum lobortis non tristique ante proin sociis accumsan
-							lobortis. Auctor etiam porttitor phasellus tempus cubilia ultrices tempor sagittis. Nisl fermentum
-							consequat integer interdum integer purus sapien. Nibh eleifend nulla nascetur pharetra commodo mi augue
-							interdum tellus. Ornare cursus augue feugiat sodales velit lorem. Semper elementum ullamcorper lacinia
-							natoque aenean scelerisque.
+							Throughout the jam I worked with two other students, first coming up with game ideas and designs for the theme we were given; 'Spitfire'. 
+							Overall we came up with the idea of making a twin stick shooter, inspired by arcade games of the same genre such as 1942, and more recent games such as Cuphead's flying level.
+							Building on this idea I worked as the solo programmer to create an endless level in which enemy planes spawn in and attack the player, who is a playing as a Spitfire plane.
+							The other two students created the art for the project, giving it a pixelated, and somewhat cartoony feel to it.
+							After submitting the game to the jam we waited a while during the game was made avaliable to the public in Stoke City Centre, as part of a push to get people back into city centres.
+							During the awards ceremony it was revealed that we had won our category as well as overall, with the main feedback given that people wanted more levels, and that it felt like the 'most complete game in the contest overall.' 
 						</p>
 						<footer>
-							<a href="https://player-two.itch.io/rise-of-the-spitfire" class="button">Play Using HTML</a>
+							<a href="https://player-two.itch.io/rise-of-the-spitfire" class="button">Play On Itch.io</a>
 						</footer>
 					</article>
 
@@ -125,19 +121,11 @@
 						<header>
 							<h2><a href="#">Long Live The King</a></h2>
 							<p>
-								Sociis aenean eu aenean mollis mollis facilisis primis ornare penatibus aenean. Cursus ac enim
-								pulvinar curabitur morbi convallis. Lectus malesuada sed fermentum dolore amet.
+								For the Ludum Dare 41 I worked in a small team of 2 to develop a Lemmings-esk puzzle platformer based around moving multiple screens. The theme for this project was 'Sacrifices Must Be Made.'
 							</p>
 						</header>
 						<p>
-							Commodo id natoque malesuada sollicitudin elit suscipit. Curae suspendisse mauris posuere accumsan massa
-							posuere lacus convallis tellus interdum. Amet nullam fringilla nibh nulla convallis ut venenatis purus
-							sit arcu sociis. Nunc fermentum adipiscing tempor cursus nascetur adipiscing adipiscing. Primis aliquam
-							mus lacinia lobortis phasellus suscipit. Fermentum lobortis non tristique ante proin sociis accumsan
-							lobortis. Auctor etiam porttitor phasellus tempus cubilia ultrices tempor sagittis. Nisl fermentum
-							consequat integer interdum integer purus sapien. Nibh eleifend nulla nascetur pharetra commodo mi augue
-							interdum tellus. Ornare cursus augue feugiat sodales velit lorem. Semper elementum ullamcorper lacinia
-							natoque aenean scelerisque.
+							
 						</p>
 						<footer>
 							<a href="https://player-two.itch.io/long-live-the-king" class="button">Download From Itch.io</a>
@@ -154,19 +142,11 @@
 						<header>
 							<h2><a href="#">Zombie Escape</a></h2>
 							<p>
-								Sociis aenean eu aenean mollis mollis facilisis primis ornare penatibus aenean. Cursus ac enim
-								pulvinar curabitur morbi convallis. Lectus malesuada sed fermentum dolore amet.
+								For my first 48 hour game jam I worked in a small team to create a game based around the theme of 'Running Out Of Space.' 
 							</p>
 						</header>
 						<p>
-							Commodo id natoque malesuada sollicitudin elit suscipit. Curae suspendisse mauris posuere accumsan massa
-							posuere lacus convallis tellus interdum. Amet nullam fringilla nibh nulla convallis ut venenatis purus
-							sit arcu sociis. Nunc fermentum adipiscing tempor cursus nascetur adipiscing adipiscing. Primis aliquam
-							mus lacinia lobortis phasellus suscipit. Fermentum lobortis non tristique ante proin sociis accumsan
-							lobortis. Auctor etiam porttitor phasellus tempus cubilia ultrices tempor sagittis. Nisl fermentum
-							consequat integer interdum integer purus sapien. Nibh eleifend nulla nascetur pharetra commodo mi augue
-							interdum tellus. Ornare cursus augue feugiat sodales velit lorem. Semper elementum ullamcorper lacinia
-							natoque aenean scelerisque.
+							
 						</p>
 						<footer>
 							<a href="https://player-two.itch.io/zombie-escape" class="button">Download From Itch.io</a>
