--- a/Game Jams/index.html
+++ b/Game Jams/index.html
@@ -73,7 +73,7 @@
 							<header>
 								<h3><a href="#">Long Live The King</a></h3>
 							</header>
-							<p>Devloped for Ludum Dare 41.</p>
+							<p>Devloped for Ludum Dare 43.</p>
 						</article>
 
 						<article>
@@ -81,7 +81,7 @@
 							<header>
 								<h3><a href="#">Zombie Escape</a></h3>
 							</header>
-							<p>First Ever Game Jam - Developed for Ludum Dare 40.</p>
+							<p>First Ever Game Jam - Developed for Ludum Dare 42.</p>
 						</article>
 					</div>
 				</section>
@@ -121,7 +121,7 @@
 						<header>
 							<h2><a href="#">Long Live The King</a></h2>
 							<p>
-								For the Ludum Dare 41 I worked in a small team of 2 to develop a Lemmings-esk puzzle platformer based around moving multiple screens. The theme for this project was 'Sacrifices Must Be Made.'
+								For the Ludum Dare 43 I worked in a small team of 2 to develop a Lemmings-esk puzzle platformer based around moving multiple screens. The theme for this project was 'Sacrifices Must Be Made.'
 							</p>
 						</header>
 						<p>
@@ -146,7 +146,10 @@
 							</p>
 						</header>
 						<p>
-							
+							For this game jam submission I worked with one other programmer, working to the theme of running out of space. 
+							As we both had had some prior experience working using SDL2 in C++, we decided to use SDL as the base renderer of the project.  
+							Building from this we decided to go with a zombie style game where you need to build a pile of body parts in order to reach an escape helicopter. This would force the player to shoot the zombies when they are closer to the centre of the level, making the player 'run out of space.'
+							As a first game jam project the experience was very good, extremely stressful towards the end, but I learnt a lot from the experience that I have applied to more recent projects. 
 						</p>
 						<footer>
 							<a href="https://player-two.itch.io/zombie-escape" class="button">Download From Itch.io</a>
@@ -177,7 +180,7 @@
 								<!-- Copyright -->
 									<div class="copyright">
 										<ul class="menu">
-											<li>&copy; Untitled. All rights reserved.</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
+											<li>Brandon Roberts</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
 										</ul>
 									</div>
 
