--- a/index.html
+++ b/index.html
@@ -61,9 +61,9 @@
 								<p>
 									Welcome to my portfolio! </br> 
 									This portfolio contains the main projects I have developed so far, all split into different sub sections.</br>
-									Clicking / Tapping on any of the icons below takes you to a sub-website that is soley focused on that one sub section.</br>
+									Clicking / Tapping on any of the icons below takes you to a sub-website that is soley focused on that one section.</br>
 									Each sub-website contains a list of games developed, along with some details on how they were developed and what they were for.</br> 
-									At the bottom of the page there is an 'about me' section which details my background in computer games programming, along with general information about me.
+									At the bottom of the page there is an 'about me' section which details an overview of my background in computer games programming, along with general information about me.
 								</p>
 							</header>
 						</div>
@@ -138,11 +138,9 @@
 								<h2>About Me</h2>
 							</header>
 
-							<p align="left">Currently, I am a second year computer games programmng student studying at Staffordshire University who, for a period of 7 months during 2019/2020, worked as a programmer for a local mobile games company, Curioso Games. Whilst at this company I worked in a small team to develop two of the games listed in this portfolio; Marbles, and Rituals. Whilst at Curioso we used Unity extensivly, taking advantage of the rendering, audio and animation systems contained within the engine in order to create the engaging and interesting games shown above.</br> </br>
-
-							I have been programming projects that range in size since about 2016, each using versions of visual studio that range from 2015 to 2019. During this time my programming knowledge and abilty has improved dramatically. This has been through me tasking myself with increasingly more difficult projects over the years. These were in the form of game jams, retro game recreations or, most recently, developing projects for my degree. </br> </br>
-				
-							The goal of undertaking a degree in computer games programming is mainly to increase my knowledge within the area of games programming. Along with also to increasing my employability overall. This is so that, when I graduate, securing a dream job is a more realistic prospect.
+							<p align="left">Since 2016 I have been programming projects that range in size, aiming to learn as much as I can about the area if computer games programming as I can. Since then I have worked at a local games company, Curioso Games, completed multiple games jams, started, and completed the first year of, a computer games programming course at Staffordshire University, and much more. </br>
+									Currently, I am a second year student that is looking into more areas than I have before, with the aim to continue to challenge myself with periodically more difficult projects, improving my programming and problem solving skills through this process. Furthermore, as part of this year I am to be looking for placements for the next year, which would help me gain the confidence and experience required to work in a larger company.</br>  	
+									The overall goal of learning and improving within this area is to increase my employablity, and as a result of this, result in securing a dream job in industry.  
 							</p>
 
 						</div>
@@ -154,7 +152,7 @@
 
 				<!-- Copyright -->
 					<ul class="copyright">
-						<li>Brandon Roberts 2021</li><li>Base Design: <a href="http://html5up.net">HTML5 UP</a></li>
+						<li>Brandon Roberts</li><li>Base Design: <a href="http://html5up.net">HTML5 UP</a></li>
 					</ul>
 
 			</div>
